[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://mannitol.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 224, 104 )

[node name="mannitol" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="wall_detected" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_detected"]
position = Vector2( -48, 0 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="player_detect" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -256, 0 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D"]
modulate = Color( 1, 0, 0, 0.160784 )
position = Vector2( -256, 0 )
scale = Vector2( 7, 3.25 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="move_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="wall_detected" to="." method="_on_wall_detected_body_entered"]
[connection signal="body_exited" from="wall_detected" to="." method="_on_wall_detected_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="move_timer" to="." method="_on_move_timer_timeout"]
